; ModuleID = '/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions.c_final_sig_algs.c'
source_filename = "/home/carl/AnghaBench/openssl/ssl/statem/extr_extensions.c_final_sig_algs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@TLS13_AD_MISSING_EXTENSION = common dso_local global i32 0, align 4
@SSL_F_FINAL_SIG_ALGS = common dso_local global i32 0, align 4
@SSL_R_MISSING_SIGALGS_EXTENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32, i32)* @final_sig_algs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @final_sig_algs(%struct.TYPE_5__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %25, label %10

10:                                               ; preds = %3
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = call i64 @SSL_IS_TLS13(%struct.TYPE_5__* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %25

14:                                               ; preds = %10
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %14
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %21 = load i32, i32* @TLS13_AD_MISSING_EXTENSION, align 4
  %22 = load i32, i32* @SSL_F_FINAL_SIG_ALGS, align 4
  %23 = load i32, i32* @SSL_R_MISSING_SIGALGS_EXTENSION, align 4
  %24 = call i32 @SSLfatal(%struct.TYPE_5__* %20, i32 %21, i32 %22, i32 %23)
  store i32 0, i32* %4, align 4
  br label %26

25:                                               ; preds = %14, %10, %3
  store i32 1, i32* %4, align 4
  br label %26

26:                                               ; preds = %25, %19
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i64 @SSL_IS_TLS13(%struct.TYPE_5__*) #1

declare dso_local i32 @SSLfatal(%struct.TYPE_5__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
